@@ -1,26 +1,20 @@
 package huy.example.demoMonday.config;
 
-import huy.example.demoMonday.entity.Parent;
-import huy.example.demoMonday.entity.Role;
-import huy.example.demoMonday.entity.Staff;
-import huy.example.demoMonday.entity.Student;
-import huy.example.demoMonday.entity.UserAccount;
-import huy.example.demoMonday.entity.UserRole;
-import huy.example.demoMonday.repository.ParentRepository;
-import huy.example.demoMonday.repository.RoleRepository;
-import huy.example.demoMonday.repository.StaffRepository;
-import huy.example.demoMonday.repository.StudentRepository;
-import huy.example.demoMonday.repository.UserAccountRepository;
-import huy.example.demoMonday.repository.UserRoleRepository;
+import huy.example.demoMonday.entity.*;
+import huy.example.demoMonday.repository.*;
+import huy.example.demoMonday.service.AuthService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.core.env.Environment;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
+@Slf4j
 @Configuration
 @RequiredArgsConstructor
 public class PostDbBootstrap implements CommandLineRunner {
@@ -33,7 +27,8 @@ public class PostDbBootstrap implements CommandLineRunner {
     private final ParentRepository parentRepo;
     private final StudentRepository studentRepo;
 
-    private final PasswordEncoder passwordEncoder;
+    private final AuthService authService;     // dùng đúng salt+hash+email-verify
+    private final Environment env;
 
     @Override
     @Transactional
@@ -46,14 +41,37 @@ public class PostDbBootstrap implements CommandLineRunner {
         ensureRole("STUDENT");
         ensureRole("PARENT");
 
-        // 2) mỗi role admin chỉ 1 account
-        ensureSingleAdmin("SYSTEM_ADMIN", "sysadmin", "SYSadmin@123");
-        ensureSingleAdmin("SCHOOL_ADMIN","schooladmin","SchoolAdmin@123");
+        // ---- NEW: đọc cấu hình điều khiển seed admin & delay mail ----
+        boolean seedAdmins   = env.getProperty("app.bootstrap.seed-admins", Boolean.class, true);
+        boolean seedAdmin2   = env.getProperty("app.bootstrap.seed-admin2", Boolean.class, true);
+        long mailDelayMillis = env.getProperty("app.bootstrap.mail-delay-ms", Long.class, 1500L);
 
-        // 3) seed tài khoản cho staff/parent/student chưa có user
-        seedAccountsForStaff();
-        seedAccountsForParents();
-        seedAccountsForStudents();
+        // 2) Seed 2 admin từ ENV/secret (KHÔNG hardcode)
+        //   - ADMIN1_USERNAME, ADMIN1_EMAIL, ADMIN1_PASSWORD
+        //   - ADMIN2_USERNAME, ADMIN2_EMAIL, ADMIN2_PASSWORD
+        if (seedAdmins) {
+            seedAdminFromEnv("ADMIN1");
+
+            // ---- NEW: chèn delay để tránh Mailtrap rate limit ----
+            if (seedAdmin2) {
+                safeSleep(mailDelayMillis);
+                seedAdminFromEnv("ADMIN2");
+            } else {
+                log.info("[Bootstrap] seed-admin2 = false → skip ADMIN2");
+            }
+        } else {
+            log.info("[Bootstrap] seed-admins = false → skip seeding admins");
+        }
+
+        // 3) (Tuỳ chọn) seed tài khoản cho hồ sơ (mặc định OFF để an toàn)
+        boolean seedProfiles = env.getProperty("app.bootstrap.seed-profiles", Boolean.class, false);
+        if (seedProfiles) {
+            safeSeedAccountsForStaff();
+            safeSeedAccountsForParents();
+            safeSeedAccountsForStudents();
+        } else {
+            log.info("[Bootstrap] seed-profiles = false → skip creating login for Staff/Parent/Student");
+        }
     }
 
     /* ============ helpers ============ */
@@ -63,120 +81,167 @@ public class PostDbBootstrap implements CommandLineRunner {
             var r = new Role();
             r.setId(UUID.randomUUID());
             r.setCode(code);
-            return roleRepo.save(r);
+            roleRepo.save(r);
+            log.info("[Bootstrap] created role {}", code);
+            return r;
         });
     }
 
-    private void ensureSingleAdmin(String roleCode, String username, String rawPassword) {
-        // nếu đã có ít nhất 1 user có role này thì bỏ qua
-        if (userRoleRepo.existsByRole_Code(roleCode)) return;
+    /**
+     * Seed 1 admin (SYSTEM_ADMIN) từ ENV:
+     * PREFIX_USERNAME, PREFIX_EMAIL, PREFIX_PASSWORD
+     * - Nếu user đã tồn tại (username hoặc email), chỉ ensure role + bật enabled=true.
+     * - Nếu chưa, tạo qua AuthService.registerUser (đúng raw+salt + gửi mail verify), rồi set enabled=true (break-glass).
+     * - KHÔNG in ra mật khẩu.
+     */
+    private void seedAdminFromEnv(String prefix) {
+        String u = env.getProperty(prefix + "_USERNAME");
+        String e = env.getProperty(prefix + "_EMAIL");
+        String p = env.getProperty(prefix + "_PASSWORD");
 
-        Role role = roleRepo.findByCode(roleCode).orElseThrow();
-
-        // tạo user (nếu tên đã tồn tại thì dùng lại, tránh trùng unique)
-        UserAccount user = userRepo.findByUsername(username).orElseGet(() -> {
-            var u = new UserAccount();
-            u.setId(UUID.randomUUID());
-            u.setUsername(username);
-            u.setPasswordHash(passwordEncoder.encode(rawPassword));
-            u.setEnabled(true);
-            return userRepo.save(u);
-        });
-
-        attachRole(user, role);
-        System.out.println("[Bootstrap] " + roleCode + " = " + username + " / " + rawPassword);
-    }
-
-    private void seedAccountsForStaff() {
-        Role teacherRole = roleRepo.findByCode("TEACHER").orElseThrow();
-        List<Staff> staffs = staffRepo.findAll();
-
-        for (Staff s : staffs) {
-            if (s.getUser() != null) continue;                 // <— Dùng object mapping
-
-            String base = safeUsernameBase(s.getFullName(), "teacher");
-            String username = uniqueUsername("t." + base);
-            String rawPass  = "T@" + safeTail(s.getPhone(), 6, "123456");
-
-            UserAccount u = createUser(username, rawPass);
-            s.setUser(u);                                       // <— set user object
-            staffRepo.save(s);
-
-            attachRole(u, teacherRole);
-            System.out.println("[Bootstrap] TEACHER: " + username + " / " + rawPass);
+        if (isBlank(u) || isBlank(e) || isBlank(p)) {
+            log.warn("[Bootstrap] {}_* missing → skip this admin", prefix);
+            return;
         }
-    }
 
-    private void seedAccountsForParents() {
-        Role parentRole = roleRepo.findByCode("PARENT").orElseThrow();
-        List<Parent> parents = parentRepo.findAll();
+        ensureRole("SYSTEM_ADMIN");
 
-        for (Parent p : parents) {
-            if (p.getUser() != null) continue;
-
-            String base = safeUsernameBase(p.getFullName(), "parent");
-            String username = uniqueUsername("p." + base);
-            String rawPass  = "P@" + safeTail(p.getPhone(), 6, "123456");
-
-            UserAccount u = createUser(username, rawPass);
-            p.setUser(u);
-            parentRepo.save(p);
-
-            attachRole(u, parentRole);
-            System.out.println("[Bootstrap] PARENT: " + username + " / " + rawPass);
+        Optional<UserAccount> existed = userRepo.findByUsernameOrEmail(u, e);
+        UserAccount user;
+        if (existed.isPresent()) {
+            user = existed.get();
+            if (!user.isEnabled()) {
+                user.setEnabled(true);
+                userRepo.save(user);
+                log.info("[Bootstrap] {} exists but disabled → re-enabled", prefix);
+            }
+            attachRole(user, roleRepo.findByCode("SYSTEM_ADMIN").orElseThrow());
+            log.info("[Bootstrap] {} ok (username={}, email={})", prefix, user.getUsername(), user.getEmail());
+            return;
         }
-    }
 
-    private void seedAccountsForStudents() {
-        Role studentRole = roleRepo.findByCode("STUDENT").orElseThrow();
-        List<Student> students = studentRepo.findAll();
+        user = authService.registerUser(u, e, p, "SYSTEM_ADMIN"); // có gửi mail verify
+        user.setEnabled(true); // break-glass: cho phép đăng nhập ngay
+        // nếu có field systemManaged thì mở dòng sau:
+        // user.setSystemManaged(true);
+        userRepo.save(user);
 
-        for (Student st : students) {
-            if (st.getUser() != null) continue;
-
-            String code = (st.getStudentCode() != null && !st.getStudentCode().isBlank())
-                    ? st.getStudentCode().toLowerCase()
-                    : UUID.randomUUID().toString().substring(0, 8);
-
-            String username = uniqueUsername("s." + code);
-            String rawPass  = "S@" + code.substring(0, Math.min(6, code.length()));
-
-            UserAccount u = createUser(username, rawPass);
-            st.setUser(u);
-            studentRepo.save(st);
-
-            attachRole(u, studentRole);
-            System.out.println("[Bootstrap] STUDENT: " + username + " / " + rawPass);
-        }
-    }
-
-    private UserAccount createUser(String username, String rawPassword) {
-        var u = new UserAccount();
-        u.setId(UUID.randomUUID());
-        u.setUsername(username);
-        u.setPasswordHash(passwordEncoder.encode(rawPassword));
-        u.setEnabled(true);
-        return userRepo.save(u);
+        attachRole(user, roleRepo.findByCode("SYSTEM_ADMIN").orElseThrow());
+        log.info("[Bootstrap] {} created (username={}, email=masked)", prefix, user.getUsername());
     }
 
     private void attachRole(UserAccount user, Role role) {
         if (!userRoleRepo.existsByUser_IdAndRole_Id(user.getId(), role.getId())) {
             var ur = new UserRole();
             ur.setId(UUID.randomUUID());
-            ur.setUser(user);    // <— mapping theo object
+            ur.setUser(user);
             ur.setRole(role);
             userRoleRepo.save(ur);
         }
     }
 
-    private static String safeUsernameBase(String name, String fallback) {
-        String base = (name == null || name.isBlank()) ? fallback : name;
-        return base.toLowerCase().replaceAll("[^a-z0-9]+", ".");
+    private static boolean isBlank(String s){
+        return s == null || s.trim().isEmpty();
     }
 
-    private static String safeTail(String s, int n, String deflt) {
-        if (s == null || s.isBlank()) return deflt;
-        return s.length() <= n ? s : s.substring(s.length() - n);
+    private static void safeSleep(long ms) {
+        if (ms <= 0) return;
+        try { Thread.sleep(ms); } catch (InterruptedException ie) { Thread.currentThread().interrupt(); }
+    }
+
+    /* ============ Safe seeding cho hồ sơ (tùy chọn) ============ */
+
+    private void safeSeedAccountsForStaff() {
+        Role teacherRole = roleRepo.findByCode("TEACHER").orElseThrow();
+        List<Staff> staffs = staffRepo.findAll();
+
+        int created = 0;
+        for (Staff s : staffs) {
+            if (s.getUser() != null) continue;
+            String email = safeEmail(s.getEmail());
+            if (email == null) continue;
+
+            String username = emailToBaseUsername(email, "t");
+            String password = strongTempPassword();
+
+            UserAccount u = authService.registerUser(username, email, password, "TEACHER");
+            attachRole(u, teacherRole);
+
+            s.setUser(u);
+            staffRepo.save(s);
+            created++;
+        }
+        if (created > 0) log.info("[Bootstrap] Staff seeded login accounts: {}", created);
+    }
+
+    private void safeSeedAccountsForParents() {
+        Role parentRole = roleRepo.findByCode("PARENT").orElseThrow();
+        List<Parent> parents = parentRepo.findAll();
+
+        int created = 0;
+        for (Parent p : parents) {
+            if (p.getUser() != null) continue;
+            String email = safeEmail(p.getEmail());
+            if (email == null) continue;
+
+            String username = emailToBaseUsername(email, "p");
+            String password = strongTempPassword();
+
+            UserAccount u = authService.registerUser(username, email, password, "PARENT");
+            attachRole(u, parentRole);
+
+            p.setUser(u);
+            parentRepo.save(p);
+            created++;
+        }
+        if (created > 0) log.info("[Bootstrap] Parent seeded login accounts: {}", created);
+    }
+
+    private void safeSeedAccountsForStudents() {
+        Role studentRole = roleRepo.findByCode("STUDENT").orElseThrow();
+        List<Student> students = studentRepo.findAll();
+
+        int created = 0;
+        for (Student st : students) {
+            if (st.getUser() != null) continue;
+            String email = safeEmailFromStudent(st);
+            if (email == null) continue;
+
+            String base = (st.getStudentCode() != null && !st.getStudentCode().isBlank())
+                    ? st.getStudentCode().toLowerCase()
+                    : "s" + UUID.randomUUID().toString().substring(0, 8);
+
+            String username = uniqueUsername("s." + base);
+            String password = strongTempPassword();
+
+            UserAccount u = authService.registerUser(username, email, password, "STUDENT");
+            attachRole(u, studentRole);
+
+            st.setUser(u);
+            studentRepo.save(st);
+            created++;
+        }
+        if (created > 0) log.info("[Bootstrap] Student seeded login accounts: {}", created);
+    }
+
+    /* ===== utilities ===== */
+
+    private String safeEmail(String email) {
+        if (email == null) return null;
+        String e = email.trim();
+        if (e.isEmpty() || !e.contains("@")) return null;
+        return e;
+    }
+
+    private String safeEmailFromStudent(Student st) {
+        // nếu chưa có email cho student → return null để bỏ qua
+        return null;
+    }
+
+    private String emailToBaseUsername(String email, String prefix) {
+        String local = email.substring(0, email.indexOf('@')).toLowerCase();
+        String base = prefix + "." + local.replaceAll("[^a-z0-9._-]", "");
+        return uniqueUsername(base);
     }
 
     private String uniqueUsername(String base) {
@@ -188,5 +253,13 @@ public class PostDbBootstrap implements CommandLineRunner {
             i++;
         }
         return cand;
+    }
+
+    private String strongTempPassword() {
+        String alpha = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+        StringBuilder sb = new StringBuilder(16);
+        java.util.concurrent.ThreadLocalRandom r = java.util.concurrent.ThreadLocalRandom.current();
+        for (int i = 0; i < 16; i++) sb.append(alpha.charAt(r.nextInt(alpha.length())));
+        return sb.toString();
     }
 }
